@@ -119,6 +119,11 @@
 #d
 #debug
 
+# e|explicit_domain STRING
+# With -A, use STRING as the default domain rather than deriving
+# from the IP address connected to.
+#explicit_domain some.domain
+
 # F|log_facility FACILITY:
 # Facility to log to.
 # (default "mail")
